overflow issue

--- a/sites/all/themes/library_bootstrap_subtheme/css/style.css
+++ b/sites/all/themes/library_bootstrap_subtheme/css/style.css
@@ -8673,6 +8673,7 @@ input.summon-search-submit.button-website:focus {
 .paragraphs-item-text p {
   margin: 1.8em 5%;
   font-size: 120%;
+  overflow: inherit;
 }
 /* float thumbnail image and don't let text wrap; clear float after last paragraph */
 .paragraphs-item-thumbnail-description .field-item img {
