--- a/sites/all/themes/library_bootstrap_subtheme/less/paragraphs.less
+++ b/sites/all/themes/library_bootstrap_subtheme/less/paragraphs.less
@@ -1,7 +1,7 @@
 /* Styling for Paragraph Types */
 
 /* text-only paragraphs */
-.paragraphs-item-text p {margin: 1.8em 5%;font-size:120%;}
+.paragraphs-item-text p {margin: 1.8em 5%;font-size:120%;overflow:inherit;}
 
 /* float thumbnail image and don't let text wrap; clear float after last paragraph */
 .paragraphs-item-thumbnail-description .field-item img {float: left; margin: 0 20px 20px 0;}
@@ -16,8 +16,3 @@
 
 /* add space above each thumbnail/image (does not include top image) */
 .field-name-field-image {margin-top: 3em;}
-
-
-
-
-
